--- a/app/views/advertisers/dashboard.html.erb
+++ b/app/views/advertisers/dashboard.html.erb
@@ -76,7 +76,7 @@ var ck_data = <%= @flot_click_data %>;
 
 var options = {
   xaxes: [ { mode: 'time', timeformat: "%Y/%m/%d", timezone: 'browser', ticks: 7 } ],
-  yaxes: [ { min: 0, ticks: 4 }, { position: 'right', min: 0, max:500, ticks: 4, alignTicksWithAxis: 1 } ],
+  yaxes: [ { min: 0, ticks: 4 }, { position: 'right', min: 0, ticks: 4, alignTicksWithAxis: 1 } ],
   legend: { position: 'nw', show: true, container: $('#chart_legend'), noColumns: 0 },
   series: {
     lines: { show: true, lineWidth: 2 },
