--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       <div class="clear"></div>
 	  <div class="social_icon">
       <h5>关注我们: </h5>
-      <a href="http://www.weibo.com/adspot" target="_blank"><i class="weibo"></i></a>
+      <a href="http://weibo.com/adspot" target="_blank"><i class="weibo"></i></a>
     </div><label>Copyright © 2012. Adspot.cn</label> </div>
 	</footer>
 
