--- a/app/views/users/forget_password.erb
+++ b/app/views/users/forget_password.erb
@@ -5,9 +5,11 @@
     <div class="box_gray_around login_content">
       <%= form_tag(reset_password_users_path, :method => :put) do %>
         <ul>
-          <li><label>请输入您的登录邮箱</label><%= email_field_tag 'email', @email.blank? ? '' : @email %></li>
+          <li><label>输入登录邮箱</label><%= email_field_tag 'email', @email.blank? ? '' : @email %></li>
           <li><label>验证码</label>
+          <div class="captcha">
           <%= show_simple_captcha :label => '请输入上面的字符' %>
+          </div>
           <div class="notice_form">
             <i class="normal"><%= link_to '看不清楚？换张图片', refresh_captcha_path, :remote => true %></i>
           </div>
@@ -24,8 +26,8 @@
     $("form").validate({
       //debug: true,
       rules: {
-        email: { required: true, email: true }
-        captcha: { required: true, minlength: 6 }
+        //email: { required: true, email: true },
+        //captcha: { required: true, minlength: 6 }
       }
     });
   });
