--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -25,9 +25,9 @@
     </li>
     <li>
     <%= f.label :pricing, '计价方式：' %>
-    <%= f.select :pricing, [['CPC',1],['CPA',2],['CPS',3]] %> 
+    <%= f.select(:pricing, [['CPC',1],['CPA',2],['CPS',3]], {}, {:style => 'width:80px'}) %> 
     <%= f.number_field :unit_price, :class => 'width1' %>
-    <%= f.label :upper_limit, ' 每日上限：', :style => 'margin-left:70px' %>
+    <%= f.label(:upper_limit, ' 每日上限：', :style => 'margin-left:30px') %>
     <%= f.text_field :upper_limit, :class => 'width1' %>
     </li>
     <li>
@@ -35,15 +35,15 @@
     <%= f.url_field :click_target %>
     <%= form_notice('请输入产品的链接地址') %>
     </li>
-    <li>
-    <%= f.label :delivery_type, '投放规则：' %>
-    <%= f.select :delivery_type, [['允许任何网站投放',1],['限定媒体类别投放',2],['限定网站投放',3]] %>
+    <!--li>
+    <%#= f.label :delivery_type, '投放规则：' %>
+    <%#= f.select :delivery_type, [['允许任何网站投放',1],['限定媒体类别投放',2],['限定网站投放',3]] %>
     </li>
     <li>
     <label></label>
-    <%= f.text_area :delivery_rule, :rows => 5 %>
+    <%#= f.text_area :delivery_rule, :rows => 5 %>
     <%#= form_notice('一行一条') %>
-    </li>
+    </li-->
     <li>
     <label></label>
     <%= f.submit '提 交', :class => 'btn_green size-max' %>
