--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -1,19 +1,40 @@
-<div class="fullwidth">  
-  <%#= render 'advertisers/quick_link' %>
-  <div class="ad_right">
-    <%= notice_div %>
-    <h1>修改密码</h1>
-    <div class="data_chart">
+<%= notice_div %>
+<div class="content">
+  <h1 class="title_page">我的账户设置</h1>
+
+  <div class="fixwidth mysetting">
+    <div class="form_left">
       <%= form_tag(update_password_user_path, :id => 'frmChangePwd', :method => :put) do %>
         <ul>
-          <li><label>当 前 账 号</label><%= @user.email %></li>
-          <li><label>旧 密 码</label><%= password_field_tag 'old_password' %></li>
-          <li><label>新 密 码</label><%= password_field_tag 'new_password' %></li>
-          <li><label>确 认 密 码</label><%= password_field_tag 'confirm_password' %></li>
-          <li><label></label><%= submit_tag '修 改', :class => 'btn_green size-max' %></li>
+          <li>
+          <label>登录邮箱</label>
+          <span><%= @user.email %></span> 
+          </li>
+          <li>
+          <label>输入旧密码</label>
+          <%= password_field_tag 'old_password' %>
+          <div class="notice_form"><i class="normal">请输入旧密码</i></div>
+          </li>
+          <li>
+          <label>输入新密码</label>
+          <%= password_field_tag 'new_password' %>
+          <div class="notice_form"><i class="normal">密码长度6~14位，字母区分大小写</i></div>
+          </li>
+          <li>
+          <label>新密码确认</label>
+          <%= password_field_tag 'confirm_password' %>
+          <div class="notice_form"><i class="normal">再一次输入密码</i></div>
+          </li>
+          <li>
+          <label></label>
+          <%= submit_tag '修 改', :class => 'btn_green size-max' %>
+          </li>    
         </ul>
       <% end %>
     </div>
+    <div class="form_right">
+    </div>
+    <div class="clear"></div>
   </div>
 </div>
 
