--- a/app/views/websites/code.html.erb
+++ b/app/views/websites/code.html.erb
@@ -7,6 +7,9 @@
     <p>请将此段代码复制到您网站下任意页面的body标签前（建议放在head中），则即可在包含此段代码的页面上进行打点操作。</p>
     <pre class="site_code"><%= h code(@website.wcode) %></pre>
   </div>
-  <%= link_to '切换到该网站', website_tagged_images_path(@website.wcode) %>
+  <div align="center">
+  <%= link_to '现在就去打点', Utils.absolute_url(@website.url), :class => 'btn_green size-l', :target => '_blank' %>&nbsp;&nbsp;
+  <%= link_to '查看该网站报表', website_tagged_images_path(@website.wcode) %>
+  </div>
 </div>
 <%= notice_javascript %>
