--- a/app/views/products/_show.html.erb
+++ b/app/views/products/_show.html.erb
@@ -38,10 +38,10 @@
         <label>链接地址：</label>
         <%= link_to @product.click_target, @product.click_target, :target => '_blank' %>
       </li>
-      <li>
+      <!--li>
         <label>投放规则：</label>
-        <%= product_delivery(@product.delivery_type) %>
-      </li>
+        <%#= product_delivery(@product.delivery_type) %>
+      </li-->
   </ul>
   </div>
 
