--- a/app/views/products/_productlist.html.erb
+++ b/app/views/products/_productlist.html.erb
@@ -2,7 +2,7 @@
 <h4 class="icon_product">产 品
   <%= link_to '(+添加新产品)', new_product_path, :remote => true %>
   <%= link_to '(刷新)', products_path, :remote => true %>
-  <i><em><%= @spotted_number %></em>/<%= @total_number %></i>
+  <!--i><em></em></i-->
   </h4>
   <div class="quick_search bg_green relative">
     <%= form_tag(search_products_path, :remote => true, :method => 'get') do %>
@@ -18,7 +18,7 @@
       <tr>
         <th class="checkbox_list"></th>
         <th class="width1">产品</th>
-        <th>关联</th>
+        <th>关联锚点</th>
         <th>修改时间</th>
         <th>状态</th>
       </tr>
@@ -63,6 +63,7 @@
   </div>
   <% end %>
   
+  <div>产品总数：<%= @total_number %>，包含锚点的产品数：<%= @spotted_number %></div>
 </aside>
 
 <div class="modal hide" id="set_status_modal">
