--- a/app/views/tagged_images/index.html.erb
+++ b/app/views/tagged_images/index.html.erb
@@ -1,46 +1,68 @@
 <%= javascript_include_tag 'jquery.masonry.min' %>
 <%= javascript_include_tag 'jquery.infinitescroll' %>
 <div class="content">
+  <nav class="page">
+  <%= will_paginate @tagged_images, :class => 'pagination pagenavi', :previous_label => '上一页', :next_label => '下一页' %>
+  </nav>
   <%= render 'website' %>
   <%#= tagged_images_bar(@website.wcode, @website.tagged_images_number, @website.untagged_images_number) %>
 
   <div class="bg_green relative">
-    <%= form_tag(search_website_tagged_images_path(@website.wcode), :remote => true, :method => 'get', :id => 'frmSearch') do %>
-      <%= select_tag :order_by, options_for_select({'按上传时间排序 ' => 1, '按名称排序' => 2}, @order_by.blank? ? 1 : @order_by) %>.
-      <%= text_field_tag 'keyword', @keyword.blank? ? '' : @keyword %>
-      <%= button_tag '', :class => 'icon_search absolute', :id => 'btnSearch' %>
+    <%= form_tag(search_website_tagged_images_path(@website.wcode), :method => 'get', :id => 'frmSearch') do %>
+      <%#= select_tag :order_by, options_for_select({'按上传时间排序 ' => 1, '按名称排序' => 2}, @order_by.blank? ? 1 : @order_by) %>
+      <%= text_field_tag 'q', @keyword.blank? ? '' : @keyword, :placeholder => '输入标题关键词来过滤' %>
+      <%#= button_tag '搜索', :class => 'icon_search absolute', :id => 'btnSearch' %>
+      <%= link_to '', 'javascript:void(0)', :id => 'btnSearch', :class => 'icon_search absolute' %>
     <% end %>
   </div>
 
-  <style>
-    .item {
-      width: 220px;
-      margin: 10px;
-      float: left;
-    }
-  </style>
   <div id="container">
     <%= render 'tagged_image_list' %>
   </div>
 
-  <nav class="page">
+  <nav class="page" style="display:visible">
   <%= will_paginate @tagged_images, :class => 'pagination pagenavi', :previous_label => '上一页', :next_label => '下一页' %>
   </nav>
-  <a class="nav-toggle" href="#">Hide</a>
 </div>
 
 <script>
-$(document).ready(function(){
-  $('#container').masonry({
-    // options
-    itemSelector : '.item',
-    columnWidth : 240
-  });
-  $('#container').infinitescroll({
-    navSelector  : "nav.page",
-    nextSelector : "nav.page a.next_page",
-    itemSelector : "#container .item"
-  });
-});
+  $(function() {
+    var $container = $('#container');
+    $container.imagesLoaded(function(){
+      $container.masonry({
+        itemSelector : '.box',
+        columnWidth : 240
+      });
+      $container.infinitescroll({
+        navSelector  : "nav.page",
+        nextSelector : "nav.page a.next_page",
+        itemSelector : "#container .box",
+        loading: {
+            finishedMsg: "<em>后面没了</em>",
+			      //img: "",
+            msgText: "<em>加载中</em>"
+        }
+        ,debug: true
+      },
+      // trigger Masonry as a callback
+      function( newElements ) {
+        //alert ($(newElements).css('top'));
+        // hide new items while they are loading
+        var $newElems = $(newElements).css({ opacity: 0 });
+        // ensure that images load before adding to masonry layout
+        $newElems.imagesLoaded(function(){
+          // show elems now they're ready
+          $newElems.animate({ opacity: 1 });
+          $container.masonry( 'appended', $newElems, true ); 
+        });
+      }
 
-</script>  
+      );
+    });
+
+    $('#btnSearch').click(function() {
+      var form = $(this).closest("form");
+      form.submit();
+    });
+  });
+</script>
