--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -518,7 +518,13 @@ input.size-max{width: 300px}
 .pp_inline { line-height:18px; padding:10px }
 .hide { display:none }
 .btn-back { float:left; margin: 0 0 4px 16px }
-.box{ margin: 9px; padding: 8px; box-shadow: 0 1px 3px rgba(34,25,25,0.4); -webkit-box-shadow: 0 1px 3px rgba(34,25,25,0.4); min-height: 290px }
+.box{ margin: 9px; box-shadow: 0 1px 3px rgba(34,25,25,0.4); -webkit-box-shadow: 0 1px 3px rgba(34,25,25,0.4); text-align: left}
+.box a{padding: 8px;display: block}
+.box h5{width: 200px;height: 18px;font-weight: bold;overflow: hidden;padding: 0px 8px}
+.box span{color: #999;padding: 0px 8px;font-size: 10px}
+.box_info{background:#F2F0F0;padding: 4px 8px;box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.2)}
+.box_info span{width: 66px;margin-left: 1px;text-align: center;display: inline-block;padding: 0px;font-size: 12px}
+.box_info span:first-child{margin-left: 0px}
 .boxshadow{ box-shadow: 0 1px 10px rgba(34,25,25,0.4); -webkit-box-shadow: 0 1px 10px rgba(34,25,25,0.4); }
 
 /* -- 12. Icon -- */
