--- a/app/views/tagged_images/index.html.erb
+++ b/app/views/tagged_images/index.html.erb
@@ -1,18 +1,17 @@
 <%= javascript_include_tag 'jquery.masonry.min' %>
 <%= javascript_include_tag 'jquery.infinitescroll' %>
 <div class="content">
-  <nav class="page">
-  <%= will_paginate @tagged_images, :class => 'pagination pagenavi', :previous_label => '上一页', :next_label => '下一页' %>
-  </nav>
   <%= render 'website' %>
   <%#= tagged_images_bar(@website.wcode, @website.tagged_images_number, @website.untagged_images_number) %>
 
   <div class="bg_green relative">
     <%= form_tag(search_website_tagged_images_path(@website.wcode), :method => 'get', :id => 'frmSearch') do %>
+      <div class="relative">
       <%#= select_tag :order_by, options_for_select({'按上传时间排序 ' => 1, '按名称排序' => 2}, @order_by.blank? ? 1 : @order_by) %>
       <%= text_field_tag 'q', @keyword.blank? ? '' : @keyword, :placeholder => '输入标题关键词来过滤' %>
       <%#= button_tag '搜索', :class => 'icon_search absolute', :id => 'btnSearch' %>
       <%= link_to '', 'javascript:void(0)', :id => 'btnSearch', :class => 'icon_search absolute' %>
+      </div>
     <% end %>
   </div>
 
@@ -20,7 +19,7 @@
     <%= render 'tagged_image_list' %>
   </div>
 
-  <nav class="page" style="display:visible">
+  <nav class="page" style="display:none">
   <%= will_paginate @tagged_images, :class => 'pagination pagenavi', :previous_label => '上一页', :next_label => '下一页' %>
   </nav>
 </div>
@@ -31,7 +30,7 @@
     $container.imagesLoaded(function(){
       $container.masonry({
         itemSelector : '.box',
-        columnWidth : 240
+        columnWidth : 250
       });
       $container.infinitescroll({
         navSelector  : "nav.page",
@@ -46,7 +45,6 @@
       },
       // trigger Masonry as a callback
       function( newElements ) {
-        //alert ($(newElements).css('top'));
         // hide new items while they are loading
         var $newElems = $(newElements).css({ opacity: 0 });
         // ensure that images load before adding to masonry layout
