--- a/app/views/tagged_images/show.html.erb
+++ b/app/views/tagged_images/show.html.erb
@@ -8,13 +8,13 @@
     <% end %>
     <span class='xeditable' name='title'><%= @tagged_image.title %></span>
   </h1>
-  <div id="imgWrap" style="width:600px">
+  <div id="imgWrap" style="width:600px;margin:0 auto">
     <%#= image_tag(@tagged_image.remote_addr, :alt => @tagged_image.title, :class => 'boxshadow') %>
     <%= image_tag(show_image_website_tagged_image_path(:id => @tagged_image.id, :website_id => @website.wcode), :alt => @tagged_image.title, :class => 'boxshadow', :width => @tagged_image.width, :height => @tagged_image.height, :original_path => @tagged_image.remote_addr) %>
   </div>
   <ul>
     <li><span><label>图片尺寸：</label><%= @tagged_image.width %>*<%= @tagged_image.height %></span></li>
-    <li><span><label>图片路径：</label><%= @tagged_image.remote_addr %></span></li>
+    <!--li><span><label>图片路径：</label><%#= @tagged_image.remote_addr %></span></li-->
     <li><span><label>标注页面：</label><%= link_to @tagged_image.locate_url, @tagged_image.locate_url, :target => '_blank' %></span></li>
     <li>
     <label>该图片被标注了<em><%= @tagged_image.spots.length %></em>个锚点</label>
