--- a/app/views/advertisers/dashboard.html.erb
+++ b/app/views/advertisers/dashboard.html.erb
@@ -10,7 +10,7 @@
     <div class="data_chart">
       <h2>统计概览:</h2>
       <div id="flot">
-        <div id="chart_legend" style="width:135px"></div>
+        <div id="chart_legend" style="width:135px;float:right"></div>
         <span>
           <div class="btn-group">
             <button class="btn btn" style="width:100px">时间范围</button>
