--- a/app/views/tagged_images/show.html.erb
+++ b/app/views/tagged_images/show.html.erb
@@ -1,21 +1,12 @@
 <%= javascript_include_tag 'xeditable' %>
 <div class="content">
   <%= render 'website' %>
-
-  <h1 class="tabs">
-    <%= link_to(:back, :class => 'btn btn-small btn-back') do %>
-      <%= raw(content_tag(:i, '', :class => 'icon-arrow-left') + '返回图片列表') %>
-    <% end %>
-    <span class='xeditable' name='title'><%= @tagged_image.title %></span>
-  </h1>
-  <div id="imgWrap" style="width:600px;margin:0 auto">
-    <%#= image_tag(@tagged_image.remote_addr, :alt => @tagged_image.title, :class => 'boxshadow') %>
-    <%= image_tag(show_image_website_tagged_image_path(:id => @tagged_image.id, :website_id => @website.wcode), :alt => @tagged_image.title, :class => 'boxshadow', :width => @tagged_image.width, :height => @tagged_image.height, :original_path => @tagged_image.remote_addr) %>
-  </div>
-  <ul>
-    <li><span><label>图片尺寸：</label><%= @tagged_image.width %>*<%= @tagged_image.height %></span></li>
-    <!--li><span><label>图片路径：</label><%#= @tagged_image.remote_addr %></span></li-->
-    <li><span><label>标注页面：</label><%= link_to @tagged_image.locate_url, @tagged_image.locate_url, :target => '_blank' %></span></li>
+  <div class="img_detail">
+    <ul>
+    <li class="title_img"><span class='xeditable' name='title'><label>标题：</label><%= @tagged_image.title %></span></li>
+    <li><label>图片尺寸：</label><%= @tagged_image.width %>*<%= @tagged_image.height %></li>
+    <!--li><label>图片路径：</label><%#= @tagged_image.remote_addr %></li-->
+    <li><label>标注页面：</label><%= link_to @tagged_image.locate_url, @tagged_image.locate_url, :target => '_blank' %></li>
     <li>
     <label>该图片被标注了<em><%= @tagged_image.spots.length %></em>个锚点</label>
     <% if @products.present? %>
@@ -26,6 +17,10 @@
     <% end %>
     </li>
   </ul>
+  <div id="imgWrap">
+    <%#= image_tag(@tagged_image.remote_addr, :alt => @tagged_image.title, ) %>
+    <%= image_tag(show_image_website_tagged_image_path(:id => @tagged_image.id, :website_id => @website.wcode), :alt => @tagged_image.title,  :width => @tagged_image.width, :height => @tagged_image.height, :original_path => @tagged_image.remote_addr) %>
+  </div>
 
   <div class="tabs tab_table">
     <ul>
@@ -48,7 +43,7 @@
   <%= javascript_tag(adspot(@website.wcode, 1)) %>
 
 </div>
-
+  </div>
 <script>
   var dt_start_arr = new Array;
   dt_start_arr[1] = "<%= (Date.today - 1).to_s(:db) %>";
