--- a/app/views/websites/properties.html.erb
+++ b/app/views/websites/properties.html.erb
@@ -8,35 +8,8 @@
   <% end %>
   <div class="clear"></div>
   <div class="box_gray_around add_siteinfo">
-    <%= form_for(@website, :html => {:id => "website_info"}) do |f| %>
-      <ul>
-        <li>
-        <label>网站名称</label>
-        <%= f.text_field :wname %>
-        <%= form_notice('') %>
-        </li>
-        <li>
-        <label>网站地址</label>
-        <% if @website.url.blank? %>
-          <%= f.text_field :url %>
-          <%= form_notice('') %>
-        <% else %>
-          <%= @website.url %>
-        <% end %>
-        </li>
-        <li>
-        <label>日均流量</label>
-        <%= f.select :pv, [['0-10万', 1], ['10-50万', 2], ['50-100万', 3], ['100万以上', 4]] %>
-        <%= form_notice('') %>
-        </li>
-        <li>
-        <label>媒体分类</label>
-        <%= f.select :website_category_id, options_from_collection_for_select(@website_categories, :id, :wcname) %>
-        <%= form_notice('请仔细填写分类，以便我们的广告更加精确的找到你') %>
-        </li>
-        <li><label></label><%= f.submit '提 交', :class => 'btn_green size-max' %></li>
-      </ul>
-    <% end %>
+    <%= render 'website_form' %>
+    <a class="btn_green size-max" onclick="$('#website_info').submit();">提 交</a>
   </div>
 </div>
 <%= notice_javascript %>
